crates/diffguard-lsp/src/snapshots/diffguard_lsp__config__tests__format_rule_explanation_absent_mode.snap
---
source: crates/diffguard-lsp/src/config.rs
expression: explanation
---
Rule: rust.no_panic
Severity: error
Message: panic! macro should not be used
Patterns:
- panic!
Semantics:
- Match mode: absent
- Multiline: no
Languages: rust
Paths: src/**/*.rs
Ignore comments: no
Ignore strings: no
