crates/diffguard-lsp/src/snapshots/diffguard_lsp__config__tests__format_rule_explanation_minimal.snap
---
source: crates/diffguard-lsp/src/config.rs
expression: explanation
---
Rule: minimal
Severity: info
Message: 
Patterns:
Semantics:
- Match mode: any
- Multiline: no
Ignore comments: no
Ignore strings: no
