crates/diffguard-lsp/src/snapshots/diffguard_lsp__config__tests__format_rule_explanation_simple.snap
---
source: crates/diffguard-lsp/src/config.rs
expression: explanation
---
Rule: test.simple
Severity: warn
Message: Simple message
Patterns:
- pattern1
Semantics:
- Match mode: any
- Multiline: no
Languages: rust
Ignore comments: no
Ignore strings: no
